css/_buttons.scss
.btn-primary {
  cursor: pointer;
  transition: 0.2s ease-in-out;
  scale: 1;

  &:hover,
  &:active {
    scale: 1.05;
    transition: 0.2s ease-in-out;
  }

  @include small-desktop {
    min-height:auto;
  }

  button,
  a {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    vertical-align: middle;
    width: 20rem;
    color: $blue-400;
    text-align: center;
    font-family: postino-std;
    font-size: 3rem;
    font-weight: 500;
    line-height: 1.3;
    aspect-ratio: 2;
    background: url("/images/buttons/button-1.svg") no-repeat bottom;
  
    @include small-desktop {
      font-size: 2rem;
      height:10rem;
    }
  
    @include mobile {
      font-size: 1.5rem;
      height:8rem;
    }

    & span {
      position:relative;
    }


    &:hover {
      color: $blue-600;
      text-decoration: none;
    }
  }

  &.blue {
    button,
    a {
      background-color: $blue-300;
      display: flex;
      justify-content: center;
      align-items: center;
      text-decoration: none;

      &:hover, 
      &:active {
        color: $blue-300;
        background-color: $white;
      }
    }
  }
}

.link-text {
  font-size: 1.5rem;
  font-weight: 700;
  text-decoration: underline;
}


.link-logo a {
  &:hover {
    text-decoration: none;
  }
}

.btn-icon {
  position: relative;
  display: block;
  overflow: hidden;
  line-height: 0;
  padding: 0.5rem;
  scale: 1;
  transition: .1s ease-out;

  &:hover,  &:active {
    scale:1.1;
    transition: .1
  }

  img {
    position: relative;
    z-index: 5;
  }

  &::after {
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: $blue-400;
    clip-path: circle();
    z-index: 0;
  }

  &:hover::after {
    background-color: $blue-600;
  }
}

.btn-secondary {
  margin-top:1rem;
  font-size: 1.5rem;
  background-color: $blue-600;
  border-radius: 3rem;
  color: $white;
  padding: .75rem 1.5rem;
  transition: .1s ease-out;
  font-weight: 700; 

  @include mobile {
    font-size: 1.25rem;
  }

  &:hover, 
  &:active {
    color: $white;
    background-color: $blue-600;
    scale: 1.1; 
    transition: .1s ease-out;
    text-decoration: none;
  }
}

